Fix responsive and layout issues

--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -5,6 +5,7 @@
     background-color: var(--bg-card);
     margin: 0 auto;
     width: min(90%, 500px);
+    max-width: 1100px;
     overflow: hidden;
     line-height: 1.7;
     padding-bottom: toEm(40px, 15px);
@@ -39,9 +40,7 @@
         font-family: var(--ff-primary);
         color: var(--heading-color);
         font-size: toRem(30px);
-        margin-top: toEm(40px, 25px);
-        margin-bottom: toEm(20px, 25px);
-        margin-inline: auto;
+        margin: toEm(40px, 25px) auto toEm(20px, 25px) auto;
         width: 14ch;
         line-height: 1.2;
     }
