--- a/scss/layout/_media-queries.scss
+++ b/scss/layout/_media-queries.scss
@@ -15,7 +15,7 @@
     }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 1280px) {
 
     img,
     picture {
@@ -26,7 +26,6 @@
         display: flex;
         flex-direction: row-reverse;
         width: 1040px;
-        max-width: 1100px;
         padding: 0;
 
         &__body {
